--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chai-aur-code
 REFRESH_TOKEN_EXPIRY=10d
 MONGO_URI= mongodb://127.0.0.1:27017
+
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
